--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.unity.2d.animation": "5.0.10",
+    "com.unity.2d.spriteshape": "5.1.7",
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.cinemachine": "2.8.6",
     "com.unity.collab-proxy": "1.3.9",
